@@ -28,7 +28,7 @@
 			<include content="BottomBar">
 				<param name="info_visible" value="true" />
 			</include>
-			<include>CommonScrollbars</include>
+			<include>CommonScrollbarsWithAlphabet</include>
 			<control type="group">
 				<visible>[Control.IsVisible(500) | Control.IsVisible(506) | Control.IsVisible(507)] + String.IsEqual(listitem.dbtype,artist)</visible>
 				<control type="list" id="5005001">
